# demo2

./: .gitignore  docker-compose.yml
.github/workflows/: dev.yml
backend/: .dockerignore  Dockerfile  app.py  config.py  pyproject.toml  wsgi.py
backend/application/: __init__.py  errors.py
backend/application/classes/: exception.py  response.py
backend/application/dao/: role_listing_dao.py
backend/application/models/: role_listing.py
backend/application/routes/: role_listing_route.py
backend/application/services/: role_listing_service.py
backend/classes/: CustomException.py
backend/models/: models.py
backend/tests/unit/: test_role_listing.py
frontend/: Dockerfile  next.config.js  types.d.ts
frontend/pages/: test.tsx
